AC_PREREQ([2.71])

AC_INIT([Thing], [0.00], [nick.novikov@gmail.com])

AM_INIT_AUTOMAKE([foreign no-dist subdir-objects -Wall -Werror])


# Checks for programs

AC_PROG_CC


# Checks for libraries


# Checks for header files


# Checks for typedefs, structures, and compiler characteristics


# Checks for library functions


# Output

AC_CONFIG_FILES([
    Makefile
    src/Makefile
])

AC_CONFIG_HEADERS([config.h])

AC_OUTPUT
